--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,15 @@
         <link rel="stylesheet" type="text/css" href="static/css/layer.css">
     </head>
     <body>
-        <h1>websocket chat</h1>
+        <h1>Ark: Survival Evolvedの情報共有サイトへようこそ！</h1>
 
-        <input type="text" id="msg" value="> message"/>
-        <button id="sendBtn">send</button>
-        <ul id="rcv"></ul>
         <div id="stage">
             <canvas id='background-layer' width='1024' height='1024'></canvas>
             <canvas id='marking-layer' width='1024' height='1024'></canvas>
         </div>
 
-        <script src="static/js/websocket.js"></script>
-        <script src="static/js/canvas.js"></script>
+        <script src="static/js/background.js"></script>
+        <script src="static/js/marking.js"></script>
     </body>
 
 </html>
